--- a/pages/wordpress-posts/safer-economy.html
+++ b/pages/wordpress-posts/safer-economy.html
@@ -8,6 +8,10 @@ tags: ["translate"]
 addtositemap: true
 ---
 
+<!--{%-set data = tableauCovidMetrics[0] -%}-->
+<!--{%-set _varTierDate_ = data.TIER_DATE | formatDate2(false, tags) -%}-->
+<!--{%-set _varTierEndDate_ = data.TIER_ENDDATE | formatDate2(false, tags) -%}-->
+
 <p>California has a blueprint for reducing COVID-19 in the state with revised criteria for loosening and tightening restrictions on activities.</p>
 
 
@@ -44,7 +48,7 @@ addtositemap: true
 
 
 
-<h3 class="has-text-align-center">Current tier assignments as of November 10, 2020</h3>
+<h3 class="has-text-align-center">Current tier assignments as of {{_varTierDate_}}</h3>
 
 
 
@@ -57,7 +61,7 @@ addtositemap: true
 
 
 
-<p class="small-text">All data and tier assignments are based on results from week ending October 31, 2020. See how tiers are assigned and change, as well as county historical data (<strong>California Blueprint Data Chart</strong>), at the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">California Department of Public Health guidance page</a>.</p>
+<p class="small-text">All data and tier assignments are based on results from week ending {{_varTierEndDate_}}. See how tiers are assigned and change, as well as county historical data (<strong>California Blueprint Data Chart</strong>), at the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">California Department of Public Health guidance page</a>.</p>
 
 
 
