--- a/zh-hant/state-dashboard/index.html
+++ b/zh-hant/state-dashboard/index.html
@@ -350,14 +350,14 @@
                     </div>
                 </div>
 
-                <h3 class="has-text-align-center pb-0 mb-2 mt-3">Current tier assignments as of November 10, 2020</h3>
+                <h3 class="has-text-align-center pb-0 mb-2 mt-3">Current tier assignments as of 2020年11月10日</h3>
                 <p class="mt-0">All data and tier assignments are updated weekly every Tuesday.</p>
 
             <div class="tableauPlaceholder" id="mapChartContainer"></div>
         </div>
 
         <div class="text-center">
-        <p>All data and tier assignments are based on results from week ending October 31, 2020. See how tiers are assigned and change, as well as county historical data (<strong>California Blueprint Data Chart</strong>) at the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">California Department of Public Health guidance page</a>.</p>
+        <p>All data and tier assignments are based on results from week ending 2020年10月31日. See how tiers are assigned and change, as well as county historical data (<strong>California Blueprint Data Chart</strong>) at the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">California Department of Public Health guidance page</a>.</p>
         </div>
   
         <div class="text-center">
