deploy: d7ba03b378f180b8dbddf13dd813220ebae5bf8b

--- a/housing-and-homelessness/index.html
+++ b/housing-and-homelessness/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Housing and homelessness</h1>
           
-            <p class="small-text">Last updated&nbsp;September 15, 2020 at 11:08 AM</p>
+            <p class="small-text">Last updated&nbsp;November 12, 2020 at 6:34 PM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h3 class="js-qa-question"><strong><strong><strong>Help for renters, homeowners</strong></strong></strong>, and small landlords</h3>
+<h2 class="js-qa-question"><strong><strong><strong>Help for renters, homeowners</strong></strong></strong>, and small landlords</h2>
 
 
 
@@ -238,7 +238,7 @@
 
 
 
-<h3 class="js-qa-question"><strong>People experiencing homelessness</strong></h3>
+<h2 class="js-qa-question">People experiencing homelessness</h2>
 
 
 
@@ -250,7 +250,7 @@
 
 
 
-<h3><strong>Temporary housing for essential workers</strong></h3>
+<h2>Temporary housing for essential workers</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h3>Hotel rooms for healthcare workers&nbsp;</h3>
+<h2>Hotel rooms for healthcare workers&nbsp;</h2>
 
 
 
@@ -270,7 +270,7 @@
 
 
 
-<h3 class="js-qa-question"><strong><strong>Homeless assistance providers</strong></strong></h3>
+<h2 class="js-qa-question">Homeless assistance providers</h2>
 
 
 
@@ -282,7 +282,7 @@
 
 
 
-<h3><strong><strong><strong>Questions and answers</strong></strong></strong></h3>
+<h2>Questions and answers</h2>
 
 
 
