--- a/housing-and-homelessness/index.html
+++ b/housing-and-homelessness/index.html
@@ -290,7 +290,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong><strong>I am homeless and I may have come in contact with coronavirus. How can I self-isolate with nowhere to go and services closing down?</strong></strong></h4>
+<h4>I am homeless and I may have come in contact with coronavirus. How can I self-isolate with nowhere to go and services closing down?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -313,7 +313,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong><strong>Will there be a rent freeze or waiver for renters? Are evictions allowed during the stay at home order</strong>?</strong></h4>
+<h4>Will there be a rent freeze or waiver for renters? Are evictions allowed during the stay at home order?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -336,7 +336,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How do I get mortgage relief and/or forbearance?</strong></h4>
+<h4>How do I get mortgage relief and/or forbearance?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -359,7 +359,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How long will the mortgage forbearance last?</strong></h4>
+<h4>How long will the mortgage forbearance last?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -378,7 +378,7 @@
 
 
 
-<h3><strong>Stay Informed</strong></h3>
+<h2>Stay Informed</h2>
 
 
 
