Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,9 +1,9 @@
 
-<h2 class="h3 text-primary"><strong>When it comes to COVID-19 vaccines, California will continue to be led by science and data</strong></h2>
+<h2 class="h3 text-primary">Guidance for out-of-state travel</h2>
 
 
 
-<p>The COVID-19 Vaccination Scientific Safety Review Workgroup will review FDA-approved vaccines. They’ll work to ensure vaccines are safe and distributed equitably.</p>
+<p>California has released guidance for people traveling into and out of California.</p>
 
 
 
