Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -7,4 +7,4 @@
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">Learn more</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Learn more</a></p>
