--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary"><strong>When it comes to COVID-19 vaccines, California will continue to be led by science and data</strong></h2>
+<h2 class="h3 text-primary">Guidance for out-of-state travel</h2>
 
 
 
-<p>The COVID-19 Vaccination Scientific Safety Review Workgroup will review FDA-approved vaccines. They’ll work to ensure vaccines are safe and distributed equitably.</p>
+<p>California has released guidance for people traveling into and out of California.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/treatment-for-covid-19/#COVID-19-vaccination-planning">Learn more</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Learn more</a></p>
