--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;12 de noviembre de 2020 a las 6:40 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;13 de noviembre de 2020 a las 7:38 a. m.</p>
           
         </div>
       </div>
