--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 12, 2020 sa 6:40 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 13, 2020 sa 7:38 AM</p>
           
         </div>
       </div>
