--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">Last updated&nbsp;November 12, 2020 at 6:40 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 7:38 AM</p>
           
         </div>
       </div>
