--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月12日, 下午6:40</p>
+            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午7:38</p>
           
         </div>
       </div>
