--- a/housing-and-homelessness/index.html
+++ b/housing-and-homelessness/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Housing and homelessness</h1>
           
-            <p class="small-text">Last updated&nbsp;November 12, 2020 at 6:34 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 7:48 AM</p>
           
         </div>
       </div>
@@ -186,7 +186,7 @@
 
 
 
-<h4>Renters</h4>
+<h3>Renters</h3>
 
 
 
@@ -214,7 +214,7 @@
 
 
 
-<h4>Homeowners and small landlords</h4>
+<h3>Homeowners and small landlords</h3>
 
 
 
