--- a/es/treatment-for-covid-19/index.html
+++ b/es/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tratamiento para la COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;6 de noviembre de 2020 a las 8:02 p. m.</p>
+            <p class="small-text">Last updated&nbsp;10 de noviembre de 2020 a las 5:32 p. m.</p>
           
         </div>
       </div>
@@ -320,6 +320,59 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
+<h4>¿Ha emitido la FDA alguna autorización de uso de emergencia (EUA) para el tratamiento de la COVID-19 fuera de los hospitales?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>Sí. La FDA emitió una <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">EUA para el fármaco de anticuerpos monoclonales bamlanivimab</a>, limitado al tratamiento de:</p>
+<ul><li>Pacientes no hospitalizados con COVID-19 leve o moderada.</li><li>Pacientes adultos y pediátricos de 12 años de edad o más que pesen al menos 88 libras. </li><li>Pacientes con alto riesgo de evolucionar a COVID-19 grave u hospitalización. Esto incluye a aquellos que tienen 65 años de edad o más, o que tienen ciertas afecciones médicas crónicas.</li></ul>
+<p>Los proveedores de atención médica administran bamlanivimab en una sola dosis por vía intravenosa.</p>
+<p>Bamlanivimab no está autorizado para su uso en pacientes con COVID-19 que:</p>
+<ul><li>Están hospitalizados.</li><li>Necesitan terapia de oxígeno.</li><li>Necesitan un aumento en el flujo de oxígeno de referencia debido a afecciones subyacentes no relacionadas con la COVID-19.</li></ul>
+<p>Los pacientes tratados con bamlanivimab deben continuar haciendo lo siguiente:</p>
+<ul><li>autoaislarse</li><li>usar mascarilla </li><li>practicar el distanciamiento social </li><li>evitar compartir artículos personales </li><li>limpiar y desinfectar las superficies que se tocan con gran frecuencia </li><li>lavarse las manos con frecuencia</li></ul>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
 <h4>¿Ha aprobado la FDA algún tratamiento para los pacientes hospitalizados por COVID-19?</h4>
       </div>
     </button>
@@ -386,7 +439,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>¿Hay medicamentos disponibles para los pacientes hospitalizados con COVID-19 con ventilador?</h4>
+<h4>¿Hay medicamentos disponibles para los pacientes hospitalizados por COVID-19 con ventilador?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
