--- a/tl/treatment-for-covid-19/index.html
+++ b/tl/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Paggamot para sa COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 6, 2020 sa 8:02 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 10, 2020 sa 5:32 PM</p>
           
         </div>
       </div>
@@ -320,6 +320,59 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
+<h4>May inilabas na ba ang FDA na anumang Emergency Use Authorization (EUA) para sa paggamot ng COVID-19 sa labas ng mga ospital?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>Oo. Naglabas ang FDA ng <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">EUA para sa monoclonal antibody drug bamlanivimab</a>, limitado sa paggamot ng:</p>
+<ul><li>Mga hindi naospital na pasyenteng may mild o moderate na COVID-19.</li><li>Mga adult at pediatric na pasyenteng 12 taong gulang pataas at may timbang na hindi bababa sa 88 pounds. </li><li>Mga pasyenteng may mataas na panganib na magkaroon ng malubhang COVID-19 o maospital. Kasama rito ang mga 65 taong gulang pataas, o iyong may ilang partikular na pabalik-balik na medikal na kondisyon.</li></ul>
+<p>Ang Bamlanivimab ay pinangangasiwaan ng mga provider ng pangangalagang pangkalusugan nang isang dosis sa ilalim ng balat.</p>
+<p>Ang Bamlanivimab ay hindi pinapahintulutang gamitin sa mga pasyenteng may COVID-19 na:</p>
+<ul><li>Naospital</li><li>Kailangan ng oxygen therapy</li><li>Kailangan ng pagdagdag ng baseline na daloy ng oxygen dahil sa mga kasalukuyang kondisyon na hindi nauugnay sa COVID-19</li></ul>
+<p>Ang mga pasyenteng ginagamot gamit ang bamlanivimab ay dapat patuloy na:</p>
+<ul><li>Mag-isolate</li><li>Magsuot ng mask </li><li>Magpanatili ng distansya sa ibang tao </li><li>Hindi magpagamit sa iba ng personal na gamit </li><li>Linisin at i-disinfect ang mga surface na "madalas hawakan"</li><li>Madalas na maghugas ng kamay</li></ul>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
 <h4>May naaprubahan na ba ang FDA na anumang paggamot para sa mga nasa ospital na pasyenteng may COVID-19?</h4>
       </div>
     </button>
@@ -386,7 +439,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>May mga gamot bang available para sa mga nasa ospital na pasyenteng may COVID-19 na gumagamit ng  ventilator?</h4>
+<h4>May mga gamot bang available para sa mga nasa ospital na pasyenteng may COVID-19 na gumagamit ng ventilator?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
