--- a/vi/safer-economy/index.html
+++ b/vi/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h1>
           
-            <p class="small-text">Last updated&nbsp;13 tháng 11, 2020 lúc 8:28</p>
+            <p class="small-text">Last updated&nbsp;13 tháng 11, 2020 lúc 8:38</p>
           
         </div>
       </div>
@@ -193,11 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Các quận nhỏ (có quy mô dân số dưới 106,000 người) có thể thay đổi các biện pháp đánh giá ca bệnh vì mục đích chỉ định cấp.</br> **Chỉ số công bằng sức khỏe không được áp dụng tại các quận nhỏ. Chỉ số công bằng sức khỏe được sử dụng để chuyển sang cấp ít hạn chế hơn.</p>
-<p> </p>
-
-
-
-<h3 class="has-text-align-center">Chỉ định cấp quận hiện tại kể từ ngày 10 tháng 11 năm 2020</h3>
+<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center">Chỉ định cấp quận hiện tại kể từ 10 tháng 11, 2020</h3>
 
 
 
@@ -205,7 +201,7 @@
 
 
 
-<p class="small-text">Toàn bộ dữ liệu và chỉ định theo cấp được căn cứ theo kết quả từ tuần kết thúc vào ngày 31 tháng 10 năm 2020. Xem cách chỉ định và thay đổi các cấp cùng dữ liệu lịch sử của quận (<strong>Bảng Dữ Liệu Kế Hoạch Chi Tiết California</strong>) trên <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">trang hướng dẫn của Sở Y Tế Công Cộng California</a>.</p>
+<p class="small-text">Toàn bộ dữ liệu và chỉ định cấp được căn cứ theo kết quả từ tuần kết thúc vào 31 tháng 10, 2020. Xem cách chỉ định và thay đổi các cấp cùng dữ liệu lịch sử của quận (<strong>Bảng Dữ Liệu Kế Hoạch Chi Tiết California</strong>) trên <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">trang hướng dẫn của Sở Y Tế Công Cộng California</a>.</p>
 
 
 
