--- a/ko/treatment-for-covid-19/index.html
+++ b/ko/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 치료</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 6일 오후 8:02</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 10일 오후 5:32</p>
           
         </div>
       </div>
@@ -320,6 +320,59 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
+<h4>FDA에서 비입원 COVID-19 치료를 위해 발표한 긴급 사용 승인(EUA)이 있습니까?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>있습니다. FDA는 <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">단일 클론성 항체 의약품인 밤라니비맙(Bamlanivimab)에 대한 EUA</a>를 다음 치료에 한해 발표하였습니다:</p>
+<ul><li>가볍거나 중간 정도의 COVID-19 증상을 보이는 비입원 환자.</li><li>성인 및 최소 88 파운드 체중의 만 12세 이상 소아 환자. </li><li>중증의 COVID-19 또는 입원 상태로 진행될 위험이 높은 환자. 여기에는 65세 이상의 연령자 또는 특정 만성 질환자가 해당됩니다.</li></ul>
+<p>밤라니비맙은 의료 제공자가 정맥 주사로 일회 분량을 투여합니다.</p>
+<p>다음 COVID-19 환자에 대한 밤라니비맙 사용은 승인되지 않았습니다:</p>
+<ul><li>입원 중인 경우</li><li>산소 치료법을 요하는 경우</li><li>비 COVID-19 관련 기저 질환으로 인해 기준 산소 주입량을 늘려야 하는 경우</li></ul>
+<p>밤라니비맙 치료 대상 환자들은 다음 사항을 계속 이행해야 합니다:</p>
+<ul><li>자가 격리</li><li>마스크 착용 </li><li>사회적 거리두기 </li><li>개인 물품 공유 자제 </li><li>"자주 만지는" 표면 세정 및 소독 </li><li>손 자주 씻기</li></ul>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
 <h4>FDA에서 COVID-19로 입원한 환자를 위해 승인한 치료법이 있습니까?</h4>
       </div>
     </button>
@@ -386,7 +439,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>산소 호흡기를 달고 있는 COVID-19 입원 환자에게 제공되는 약이 있습니까?</h4>
+<h4>산소 호흡기를 부착한 COVID-19 입원 환자에게 제공되는 약이 있습니까?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
