--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午8:28</p>
+            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午8:38</p>
           
         </div>
       </div>
@@ -193,11 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*可能会对小县（人口少于106,000人的县）采用其他病例评估措施，以进行等级划分。</br>**健康公平指标不适用于小县。健康公平指标是用于让某县移至限制性较低的等级。</p>
-<p> </p>
-
-
-
-<h3 class="has-text-align-center">当前等级划分（截至2020年11月10日）</h3>
+<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center">当前等级划分（截至 2020年11月10日</h3>
 
 
 
