deploy: 7931a6355378e6e4a0f38aeaace161ae491acfeb

--- a/ko/treatment-for-covid-19/index.html
+++ b/ko/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 치료</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 10일 오후 5:32</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 12일 오전 10:20</p>
           
         </div>
       </div>
@@ -294,7 +294,7 @@
       <div class="card-body">
 <p>이는 보건 긴급 사태 시 의료 제품(의약품, 치료법 등)을 신속하게 이용할 수 있도록 미국 식품의약관리청에서 제공하는 한 가지 방법입니다. 이에는 아직 연구가 진행 중인 의약품 및 치료법이 포함됩니다. 이를 통해 적절하고, 승인되었으며 사용 가능한 다른 방안이 없는 경우에 도움이 될 수 있습니다. EUA는 비상 사태 선언이 종료될 때까지 시행됩니다. FDA는 긴급 사태 중 그 필요성에 대한 자체 평가에 따라 EUA를 개정하거나 철회할 수 있습니다. 또한 EUA는 해당 의약품 또는 치료법에 대한 FDA의 승인, 허가 또는 면허에 의해 변경될 수 있습니다. </p>
 <p>본 내용에 대한 더 자세한 사항은 다음을 참조하십시오</p>
-<ul><li><a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization#coviddrugs">FDA: 긴급 사용 승인</a></li><li><a href="https://youtu.be/iGkwaESsGBQ">FDA 동영상 “EUA란 무엇입니까?”</a> </li></ul>
+<ul><li><a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization#coviddrugs">FDA: 긴급 사용 승인</a></li><li><a href="https://youtu.be/iGkwaESsGBQ">FDA 동영상 “EUA란 무엇입니까?(What is an EUA?)”</a> </li></ul>
 
       </div>
     </div>
@@ -320,23 +320,33 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>FDA에서 비입원 COVID-19 치료를 위해 발표한 긴급 사용 승인(EUA)이 있습니까?</h4>
+<h4>FDA에서 COVID-19 치료를 위해 발표한 긴급 사용 승인(EUA)이 있습니까?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>있습니다. FDA는 <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">단일 클론성 항체 의약품인 밤라니비맙(Bamlanivimab)에 대한 EUA</a>를 다음 치료에 한해 발표하였습니다:</p>
-<ul><li>가볍거나 중간 정도의 COVID-19 증상을 보이는 비입원 환자.</li><li>성인 및 최소 88 파운드 체중의 만 12세 이상 소아 환자. </li><li>중증의 COVID-19 또는 입원 상태로 진행될 위험이 높은 환자. 여기에는 65세 이상의 연령자 또는 특정 만성 질환자가 해당됩니다.</li></ul>
+<p>있습니다. FDA는 단일 클론성 항체 의약품 밤라니비맙(Bamlanivimab)에 대해 다음 치료에 한하여 EUA를 발표하였습니다:</p>
+<ul><li>가볍거나 경증의 COVID-19 비입원 환자.</li><li>성인 및 최소 88 파운드의 체중을 지닌 만 12세 이상의 소아 환자. </li><li>중증의 COVID-19 또는 입원 상태로 진행될 위험이 높은 환자. 여기에는 65세 이상의 연령자 또는 특정 만성 질환자가 해당됩니다.</li></ul>
 <p>밤라니비맙은 의료 제공자가 정맥 주사로 일회 분량을 투여합니다.</p>
-<p>다음 COVID-19 환자에 대한 밤라니비맙 사용은 승인되지 않았습니다:</p>
+<p>밤라니비맙은 다음에 해당하는 COVID-19 환자에 대한 사용 승인을 받지 않았습니다:</p>
 <ul><li>입원 중인 경우</li><li>산소 치료법을 요하는 경우</li><li>비 COVID-19 관련 기저 질환으로 인해 기준 산소 주입량을 늘려야 하는 경우</li></ul>
-<p>밤라니비맙 치료 대상 환자들은 다음 사항을 계속 이행해야 합니다:</p>
+<p>Patients treated with bamlanivimab should continue to:</p>
 <ul><li>자가 격리</li><li>마스크 착용 </li><li>사회적 거리두기 </li><li>개인 물품 공유 자제 </li><li>"자주 만지는" 표면 세정 및 소독 </li><li>손 자주 씻기</li></ul>
+<p>더 자세한 사항은 다음을 참조하십시오</p>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">COVID-19 치료를 위한 단일 항체(Monoclonal Antibody for Treatment of COVID-19)</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">밤라니비맙 긴급 사용 승인에 대해 자주 묻는 질문(Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab)</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
