--- a/vi/treatment-for-covid-19/index.html
+++ b/vi/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Điều trị bệnh COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;10 tháng 11, 2020 lúc 17:32</p>
+            <p class="small-text">Last updated&nbsp;12 tháng 11, 2020 lúc 10:20</p>
           
         </div>
       </div>
@@ -325,18 +325,28 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Có. FDA đã ban hành <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">EUA cho một loại thuốc kháng thể đơn liều bamlanivimab</a>, chỉ giới hạn để điều trị:</p>
+<p>Có. FDA đã ban hành EUA cho một loại thuốc kháng thể đơn liều bamlanivimab, chỉ giới hạn để điều trị:</p>
 <ul><li>Các bệnh nhân không phải nhập viện bị nhiễm COVID-19 ở mức độ nhẹ hoặc trung bình.</li><li>Các bệnh nhân là người lớn hoặc trẻ em từ 12 tuổi trở lên có mức cân nặng ít nhất 88 pound. </li><li>Các bệnh nhân có nguy cơ cao sẽ tiến triển bệnh COVID-19 sang mức độ nặng hoặc nhập viện. Nhóm này bao gồm cả những người từ 65 tuổi trở lên hoặc có một số bệnh trạng mãn tính cụ thể.</li></ul>
 <p>Các nhà cung cấp dịch vụ chăm sóc sức khỏe cho dùng bamlanivimab như thuốc tiêm đơn liều.</p>
 <p>Không được phép sử dụng bamlanivimab cho các bệnh nhân mắc COVID-19:</p>
 <ul><li>Nhập viện</li><li>Cần liệu pháp oxy</li><li>Cần tăng dòng oxy cơ sở do các bệnh trạng nền không liên quan đến COVID-19</li></ul>
 <p>Các bệnh nhân được điều trị bằng bamlanivimab cần tiếp tục:</p>
 <ul><li>Tự cách ly</li><li>Đeo khẩu trang </li><li>Thực hiện giãn cách xã hội </li><li>Tránh dùng chung vật dụng cá nhân </li><li>Vệ sinh và khử trùng các bề mặt "thường xuyên tiếp xúc" </li><li>Rửa tay thường xuyên</li></ul>
+<p>Để biết thêm thông tin, hãy xem</p>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Kháng Thể Đơn Liều để Điều Trị Bệnh COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Bamlanivimab</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
