--- a/zh-hant/treatment-for-covid-19/index.html
+++ b/zh-hant/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19治療</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月10日, 下午5:32</p>
+            <p class="small-text">Last updated&nbsp;2020年11月12日, 上午10:20</p>
           
         </div>
       </div>
@@ -325,18 +325,28 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>有。FDA發佈了<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">單克隆抗體藥物bamlanivimab EUA</a>，僅限用於治療以下人士：</p>
+<p>有。FDA發佈了單克隆抗體藥物bamlanivimab EUA，僅限用於治療以下人士：</p>
 <ul><li>有輕度或中度COVID-19症狀的非住院患者。</li><li>體重至少達88磅的12歲及以上成人及兒童患者。 </li><li>有較高風險發展為COVID-19重症或住院的患者。其中包括65歲或以上人士，或有特定慢性病況的人士。</li></ul>
 <p>Bamlanivimab的施用方式是由醫療保健提供者進行单剂量靜脈給藥。</p>
 <p>尚未批准將Bamlanivimab用於治療以下COVID-19患者：</p>
 <ul><li>住院患者</li><li>需要氧氣治療的患者</li><li>因有潛在的非COVID-19相關狀況而需要增加基礎氧氣流量的患者</li></ul>
 <p>使用bamlanivimab進行治療的患者應該持續進行以下事項：</p>
 <ul><li>自我隔離</li><li>佩戴口罩 </li><li>保持社交距離 </li><li>避免共用個人物品 </li><li>對「經常接觸」的表面進行清潔和消毒 </li><li>勤洗手</li></ul>
+<p>如需更多資訊，請參閱</p>
+<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用於治療COVID-19的單克隆抗體</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有關Bamlanivimab緊急使用授權的常見問題與解答</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
