--- a/ar/treatment-for-covid-19/index.html
+++ b/ar/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>علاج كوفيد-19،</h1>
           
-            <p class="small-text">Last updated&nbsp;5:32 م الساعة 10 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;10:20 ص الساعة 12 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -325,18 +325,28 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>نعم. أصدرت إدارة الغذاء والدواء (FDA) <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19#:~:text=Today%2C%20the%20U.S.%20Food%20and,in%20adult%20and%20pediatric%20patients.">ترخيص الاستخدام في حالات الطوارئ لعقار ضد وحيد النسيلة Bamlanivimab</a>، الذي يقتصر على علاج:</p>
+<p>نعم. أصدرت إدارة الغذاء والدواء (FDA) ترخيص الاستخدام في حالات الطوارئ لعقار ضد وحيد النسيلة Bamlanivimab، الذي يقتصر على علاج:</p>
 <ul><li>المرضى غير المقيمين بالمستشفى المصابين بفيروس كوفيد-19 الخفيف أو المعتدل.</li><li>المرضى البالغين والأطفال الذين تبلغ أعمارهم 12 عامًا أو أكبر ويزنون 88 رطلًا على الأقل. </li><li>المرضى المعرضين بدرجة عالية لخطر التطور إلى كوفيد-19 الشديد أو الإقامة بالمستشفى للعلاج. وهذا يشمل أولئك البالغة أعمارهم 65 عامًا أو أكثر، أو الذين يعانون من بعض الحالات الطبية المزمنة.</li></ul>
 <p>ويقوم مقدمو الرعاية الصحية بإعطاء Bamlanivimab كجرعة وحيدة عن طريق الوريد.</p>
 <p>ولا يصرح باستخدام Bamlanivimab في مرضى كوفيد-19 الذين:</p>
 <ul><li>تم إدخالهم المستشفى للإقامة والعلاج</li><li>تتطلب حالتهم العلاج بالأكسجين</li><li>تتطلب حالتهم زيادة في تدفق الأكسجين الأساسي بسبب ظروف غير معروفة ولا ترتبط بكوفيد-19</li></ul>
 <p>يجب على المرضى الذين عولجوا بعقار bamlanivimab الاستمرار في:</p>
 <ul><li>العزلة الذاتية</li><li>ارتداء القناع </li><li>التباعد الاجتماعي </li><li>تجنب مشاركة الأغراض الشخصية </li><li>التنظيف والتطهير للأسطح التي تُلمس كثيرًا وباستمرار</li><li>غسل أيديهم بشكل متكرر</li></ul>
+<p>لمعرفة المزيد من المعلومات، اطلع على</p>
+<ul><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">ضد وحيد النسيلة لعلاج كوفيد-19</a></li><li>منظمة الغذاء والدواء: <a href="https://www.fda.gov/media/143605/download">أسئلة شائعة بشأن ترخيص الاستخدام في حالات الطوارئ بالنسبة لعقار Bamlanivimab</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
