deploy: bbc03c0a4788f4e8a409b8c2aa9ce2b76a2cd41e

--- a/resources-for-emotional-support-and-well-being/index.html
+++ b/resources-for-emotional-support-and-well-being/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Resources for emotional support and well-being</h1>
           
-            <p class="small-text">Last updated&nbsp;November 4, 2020 at 1:10 PM</p>
+            <p class="small-text">Last updated&nbsp;November 13, 2020 at 9:37 AM</p>
           
         </div>
       </div>
@@ -313,7 +313,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>Deaf and hard of hearing individuals</h4>
+<h4>Deaf and hard of hearing&nbsp;individuals</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -341,7 +341,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://www.samhsa.gov/find-help/national-helpline">SAMHSA National Helpline</a>: Call <a href="tel:1-800-662-4357">800-662-HELP</a> for 24/7 information and referrals in English and Spanish. </li><li><a href="https://findtreatment.samhsa.gov">SAMHSA Treatment Locator</a><strong>: </strong> Find drug or alcohol treatment programs. </li></ul>
+<ul><li><a href="https://www.samhsa.gov/find-help/national-helpline">SAMHSA National Helpline</a>: Call&nbsp;<a href="tel:1-800-662-4357">800-662-HELP</a>&nbsp;for 24/7 information and referrals in English and Spanish.&nbsp;</li><li><a href="https://findtreatment.samhsa.gov">SAMHSA Treatment Locator</a><strong>:&nbsp;</strong>&nbsp;Find drug or alcohol treatment programs.&nbsp;</li></ul>
 
       </div>
     </div>
@@ -413,7 +413,7 @@
 <h2>Helping others</h2>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Protecting children from abuse and neglect</h4>
+<h3>Protecting children from abuse and neglect</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Community members play an important role in protecting children from abuse and neglect. If you are worried about the health or safety of a child, call the<a href="https://www.cdss.ca.gov/reporting/report-abuse/child-protective-services/report-child-abuse"> local CPS hotline</a> for the county where the child lives or find a <a href="https://files.covid19.ca.gov/pdf/wp/child-abuse-homeless-youth-service-providers.pdf">local child abuse youth victim service provider</a>.</p>
@@ -425,7 +425,7 @@
 <p>You may also be able to help children and youth who have been abused or neglected by stepping up to serve as a foster caregiver.  Please contact your local county&#8217;s <a href="https://www.cdss.ca.gov/inforesources/foster-care-and-adoptive-resource/county-recruitment-and-training">Social Service or Human Service department</a>, or call the toll-free line at <a href="tel: 1-800-543-7487">800-KIDS-4-US</a>.</p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4>Family support</h4>
+<h3>Family support</h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>If you are concerned about a family in need of food or assistance, or you need resources yourself, call <a href="tel:211">211</a>, contact your local non-profit <a href="https://frcnca.org/get-connected/">Family Resource Center</a>, or apply for public benefits, which may include health care, cash aid, and food and nutrition assistance, through your county’s <a href="http://www.benefitscal.org/">Social Services or Health and Human Services department</a>.</p>
@@ -438,7 +438,7 @@
 <p><span style="font-weight: 400;">Caregivers can find </span><a href="https://www.aging.ca.gov/covid19/Family_and_Friends_Caregiver_Resources/"><span style="font-weight: 400;">resources at the Department of Aging website</span></a><span style="font-weight: 400;">, including guidelines to protect the health and safety of both you and your loved one from COVID-19. </span></p>
 <p><!-- /wp:paragraph --></p>
 <p><!-- wp:heading {"level":4} --></p>
-<h4><strong>County Adult Protective Services</strong></h4>
+<h3><strong>County Adult Protective Services</strong></h3>
 <p><!-- /wp:heading --></p>
 <p><!-- wp:paragraph --></p>
 <p>Adult Protective Services: Call <a href="tel:833-401-0832">833-401-0832</a> 24/7 for concerns about adult abuse, neglect, or exploitation.</p>
